# mu

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: learn-github-actions.yml
src/: App.vue  AppRoute.vue  PlayerBoostrap.vue  Popovers.vue  Themes.vue  main.js
src-tauri/: Cargo.toml  private-key.pem  public-key.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_metadata.rs  http_client.rs  lib.rs  main.rs  qq.rs  setup.rs
src/assets/iconfont/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
src/common/: Player.js
src/components/: PlayControl.vue  PlayMeta.vue  PlaybackQueueItem.vue  PlaylistCategoryBar.vue  PlaylistsControl.vue
src/layout/: DefaultLayout.vue  DefaultMainCenter.vue  DefaultMainContent.vue  DefaultMainLeft.vue  DefaultMainTop.vue
src/route/: router.js
src/store/: appCommonStore.js  localMusicStore.js  platformStore.js  playStore.js  playlistSquareStore.js  settingStore.js  themeStore.js
src/views/: LocalMusicView.vue  PlaybackQueueView.vue  PlaylistDetailView.vue  PlaylistSquareView.vue  SettingView.vue
~/.tauri/: myapp.key  myapp.key.pub
